k8s-yamls/internalservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: aws-training-service # name of the internal service cluster IP
spec:
  ports:
  - name: http
    port: 8082 # port of the internal service
    targetPort: 8082
    protocol: TCP
  selector:
    app: aws-training-api
  type: ClusterIP
